data/derived/sp14/progs/unify/prog3135.ml.out
Characters 29-40:
  wwhile ((f,(f b)=b),b);;
          ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
